[gd_scene load_steps=4 format=3 uid="uid://bjcjlkqv32utf"]

[ext_resource type="Script" uid="uid://c3gywtmk6f72y" path="res://scenes/tmp/territory_action.gd" id="1_kqqsv"]
[ext_resource type="Texture2D" uid="uid://x42eqxs835yf" path="res://assets/images/swords.png" id="2_5whbm"]
[ext_resource type="Texture2D" uid="uid://ben3i8ultgsyk" path="res://assets/images/support.png" id="3_73aaq"]

[node name="TerritoryAction" type="Control"]
layout_mode = 3
anchors_preset = 0
scale = Vector2(0.4, 0.4)
script = ExtResource("1_kqqsv")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -54.0
offset_top = -25.0
offset_right = 54.0
offset_bottom = 25.0
grow_horizontal = 2
grow_vertical = 2

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 8

[node name="WarIcon" type="TextureButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("2_5whbm")

[node name="SupportIcon" type="TextureButton" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
texture_normal = ExtResource("3_73aaq")

[connection signal="mouse_entered" from="." to="." method="_on_mouse_entered"]
[connection signal="mouse_exited" from="." to="." method="_on_mouse_exited"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/WarIcon" to="." method="_on_war_icon_pressed"]
[connection signal="pressed" from="MarginContainer/HBoxContainer/SupportIcon" to="." method="_on_support_icon_pressed"]
